@@ -116,11 +116,11 @@ EXSTYLE WS_EX_CLIENTEDGE
 FONT 8, "MS Shell Dlg", 0, 0
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,241,153,50,16
-    CONTROL         "Radio_A",ID_RADIO_A,"Button",BS_AUTORADIOBUTTON,30,24,38,
+    CONTROL         "Radio_A",ID_RADIO_A,"Button",BS_AUTORADIOBUTTON,30,24,48,
                     10
-    CONTROL         "Radio_B",ID_RADIO_B,"Button",BS_AUTORADIOBUTTON,30,36,38,
+    CONTROL         "Radio_B",ID_RADIO_B,"Button",BS_AUTORADIOBUTTON,30,36,48,
                     10
-    CONTROL         "Radio_C",ID_RADIO_C,"Button",BS_AUTORADIOBUTTON,30,48,38,
+    CONTROL         "Radio_C",ID_RADIO_C,"Button",BS_AUTORADIOBUTTON,30,48,48,
                     10
     EDITTEXT        IDC_EDIT1,120,82,84,35,ES_MULTILINE | ES_AUTOHSCROLL |
                     NOT WS_BORDER,WS_EX_STATICEDGE
